--- a/modules/networking/httpmessage/CMakeLists.txt
+++ b/modules/networking/httpmessage/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_library(httpmessage HttpMessage.cpp)
 target_link_libraries(httpmessage stringutilities)
-set_target_properties(httpmessage PROPERTIES PUBLIC_HEADER "HttpMessage.hpp")
+set_target_properties(httpmessage PROPERTIES PUBLIC_HEADER "modules/networking/httpmessage/HttpMessage.hpp")
 target_include_directories(httpmessage PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>" "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 
-if(NOT SFSkipTesting EQUAL True)
+if(NOT SFSkipTesting)
     add_executable(httpmessagetest HttpMessageTest.cpp)
     target_link_libraries(httpmessagetest GTest::gtest_main httpmessage stringutilities)
     gtest_discover_tests(httpmessagetest)
