--- a/modules/sfcolor/CMakeLists.txt
+++ b/modules/sfcolor/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(SFColor STATIC SFColor.cpp)
-set_target_properties(SFColor PROPERTIES PUBLIC_HEADER "SFColor.hpp")
+set_target_properties(SFColor PROPERTIES PUBLIC_HEADER "modules/sfcolor/SFColor.hpp")
 target_include_directories(SFColor PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>" "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
