--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -3,4 +3,4 @@ add_subdirectory(sfcrypto)
 add_subdirectory(databaseconnection)
 add_subdirectory(sfcolor)
 add_subdirectory(networking)
-add_subdirectory(stringutilites)
+add_subdirectory(stringutilities)
