--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(databaseconnection)
 add_subdirectory(sfcolor)
 add_subdirectory(networking)
 add_subdirectory(stringutilities)
+add_subdirectory(logging)
