--- a/modules/logging/filelogger/CMakeLists.txt
+++ b/modules/logging/filelogger/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(FileLogger filelogger.cpp)
+add_library(FileLogger Filelogger.cpp)
 target_link_libraries(FileLogger Logger)
-set_target_properties(FileLogger PROPERTIES PUBLIC_HEADER "modules/logging/filelogger/filelogger.hpp")
+set_target_properties(FileLogger PROPERTIES PUBLIC_HEADER "modules/logging/filelogger/Filelogger.hpp")
 target_include_directories(FileLogger PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>" "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
